# im-assistant

./: .env.example  .gitignore  PLAN.md  README.md  TODO.md  config.yaml  pyproject.toml
docs/: architecture.md  dingtalk.md  wecom.md
memory/: claude_plan.md
scripts/: smoke_send.py
src/: __init__.py  main.py
src/adapters/dingtalk/: __init__.py  message.py  outbound.py  stream.py  trigger.py
src/capabilities/: __init__.py  authorizer.py  credential.py  registry.py
src/capabilities/base/: __init__.py
src/capabilities/system/: __init__.py  _dingtalk.py  contact_lookup.py  create_doc.py  create_todo.py  schedule_summary.py  send_notification.py
src/capabilities/user/: __init__.py
src/core/: __init__.py  agent_loop.py  builtin_commands.py  commands.py  inbox.py  interrupt.py  router.py  session.py  session_manager.py
src/infra/: __init__.py  audit.py  config.py  dingtalk_client.py  llm.py  log.py  metrics.py  oauth.py  store.py  token_vault.py
tests/: __init__.py  test_agent_loop.py  test_audit.py  test_authorizer.py  test_builtin_commands.py  test_capabilities.py  test_commands.py  test_config.py  test_dingtalk_client.py  test_dingtalk_outbound.py  test_dingtalk_stream.py  test_inbox.py  test_interrupt.py  test_llm.py  test_log.py  test_m2_runtime.py  test_main.py  test_oauth.py  test_router.py  test_session_manager.py  test_smoke_send.py  test_store.py  test_system_capabilities.py  test_token_vault.py
