[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "im-assistant"
version = "0.1.0"
description = "A DingTalk AI assistant built with asyncio, DingTalk Stream, and Claude."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite",
    "anthropic",
    "aiohttp",
    "cryptography",
    "dingtalk-stream",
    "httpx",
    "python-dotenv",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
